--- a/Blog Website/Final updated Blog Website/templates/index.html
+++ b/Blog Website/Final updated Blog Website/templates/index.html
@@ -29,11 +29,10 @@
         </a>
         <p class="post-meta">
           Posted by
-          <!-- post.author.name is now a User object -->
           <a href="#">{{post.author.name}}</a>
           on {{post.date}}
-          <!-- Only show delete button if user id is 1 (admin user) -->
-          {% if current_user.id == 1: %}
+          <!-- TODO: Only show delete button if user id is 1 (admin user) -->
+          {% if current//-user.id == 1: %}
           <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
           {% endif %}
         </p>
@@ -43,7 +42,7 @@
       {% endfor %}
 
       <!-- New Post -->
-      <!-- Only show Create Post button if user id is 1 (admin user) -->
+      <!-- TODO: Only show Create Post button if user id is 1 (admin user) -->
       {% if current_user.id == 1: %}
       <div class="d-flex justify-content-end mb-4">
         <a
@@ -52,7 +51,6 @@
           >Create New Post</a
         >
       </div>
-      {% endif %}
 
       <!-- Pager-->
       <div class="d-flex justify-content-end mb-4">
