--- a/Blog Website/Final updated Blog Website/templates/make-post.html
+++ b/Blog Website/Final updated Blog Website/templates/make-post.html
@@ -1,6 +1,5 @@
-{% from "bootstrap5/form.html" import render_form %}
-{% block content %}
-{% include "header.html" %}
+{% from "bootstrap5/form.html" import render_form %} {% block content %} {%
+include "header.html" %}
 
 <!-- Page Header -->
 <header
@@ -29,9 +28,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        {{ ckeditor.load() }}
-        {{ ckeditor.config(name='body') }}
-        {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+        {{ ckeditor.load() }} {{ ckeditor.config(name='body') }} {{
+        render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
   </div>
