--- a/Blog Website/Final updated Blog Website/templates/post.html
+++ b/Blog Website/Final updated Blog Website/templates/post.html
@@ -1,4 +1,3 @@
-{% from "bootstrap5/form.html" import render_form %}
 {% include "header.html" %}
 
 <!-- Page Header-->
@@ -11,7 +10,6 @@
           <h2 class="subheading">{{ post.subtitle }}</h2>
           <span class="meta"
             >Posted by
-            <!-- Changed from post.author -->
             <a href="#">{{ post.author.name }}</a>
             on {{ post.date }}
           </span>
@@ -27,8 +25,8 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         {{ post.body|safe }}
-        <!--Only show Edit Post button if user id is 1 (admin user) -->
-        {% if current_user.id == 1 %}
+        <!--TODO: Only show Edit Post button if user id is 1 (admin user) -->
+        {% if current_user.id == 1: %}
         <div class="d-flex justify-content-end mb-4">
           <a
             class="btn btn-primary float-right"
@@ -39,30 +37,28 @@
         {% endif %}
 
         <!-- Comments Area -->
-        <!-- Load the CKEditor -->
+        <!-- TODO: Add a CKEditor for commenting below -->
+        <!-- load the ckeditor -->
         {{ ckeditor.load() }}
         <!-- Configure it with the name of the form field from CommentForm -->
         {{ ckeditor.config(name='comment_text') }}
         <!-- Create the wtf quick form from CommentForm -->
         {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
         <div class="comment">
+          <!-- TODO: Show all the comments on a post -->
           <ul class="commentList">
-            <!-- Show all comments -->
             {% for comment in post.comments: %}
             <li>
               <div class="commenterImage">
-                <img
-                  src="{{ comment.comment_author.email | gravatar }}"
-                />
+                <img src="../static/assets/img/default-profile.jpg" />
               </div>
               <div class="commentText">
-                {{comment.text|safe}}
-                <span class="sub-text">{{comment.comment_author.name}}</span>
+                <p>Some comment</p>
+                <span class="date sub-text">comment author name</span>
               </div>
             </li>
             {% endfor %}
           </ul>
-
         </div>
       </div>
     </div>
